# API_Trabalho1/routes/routes.js
@@ -1,6 +1,9 @@
 const router = require('express').Router();
 const controller = require('../controller/controller.js')
 
+router.route('/register/:user/:pw').post(controller.register);
+router.route('/login/:user/:pw').post(controller.login);
+router.route('/logout').get(controller.logout);
 
 router.route('/isthis/:id').get(controller.isIt);
 
@@ -13,7 +16,7 @@ router.route('/avg').get(controller.avg);
 router.route('/iam').post(controller.iam);
 router.route('/dosage/:id').post(controller.upDosage)
 
-router.route('/api/status').get(controller.status);
+router.route('/status').get(controller.status);
 
 router.route('/dosageavg').get(controller.dosageavg);
 
